--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,50 +2,50 @@ version: "3"
 services: 
   User_A:
     image: go-pairing
-    restart: always
+    container_name: UserA
+    #restart: always
     ports:
       - 8080:8080
+    tty: true
     volumes:
-      - ../src:/src
-    command: >
-      ash -c "go run main.go"
+      - ../:/src
 
   User_B:
     image: go-pairing
-    restart: always
+    container_name: UserB
+    #restart: always
     ports:
       - 8081:8081
+    tty: true
     volumes:
-      - ../src:/src
-    command: >
-      ash -c "go run main.go"
+      - ../:/src
 
   User_C:
     image: go-pairing
-    restart: always
+    container_name: UserC
+    #restart: always
     ports:
       - 8082:8082
+    tty: true
     volumes:
-      - ../src:/src
-    command: >
-      ash -c "go run main.go"
+      - ../:/src
   
   SP:
     image: go-pairing
-    restart: always
+    container_name: SP
+    #restart: always
     ports:
       - 8083:8083
+    tty: true
     volumes:
-      - ../src:/src
-    command: >
-      ash -c "go run main.go"
+      - ../:/src
 
   TPA:
     image: go-pairing
-    restart: always
+    container_name: TPA
+    #restart: always
     ports:
       - 8084:8084
+    tty: true
     volumes:
-      - ../src:/src
-    command: >
-      ash -c "go run main.go"
+      - ../:/src
