--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ networks:
   basic:
 
 services:
-  ganache:
+  gana:
     container_name: gana
     build: ./ganache
     ports:
@@ -43,16 +43,17 @@ services:
     networks:
       - basic
 
-  # tpa:
-  #   build: .
-  #   tty: true
-  #   command: sh
-  #   volumes:
-  #     - .:/app
-  #   ports:
-  #     - 4002:4002
-  #   networks:
-  #     - basic
+  tpa:
+    build: .
+    container_name: tpa
+    tty: true
+    command: sh
+    volumes:
+      - .:/app
+    ports:
+      - 4002:4002
+    networks:
+      - basic
   
   # nginx:
   #     container_name: nginx
