--- a/ganache/Dockerfile
+++ b/ganache/Dockerfile
@@ -7,5 +7,4 @@ ENV DOCKER true
 ENV DATADIR /var/ganache
  
 EXPOSE 8545
- 
-ENTRYPOINT ["/bin/sh", "-c", "ganache-cli --host=0.0.0.0 --db=${DATADIR} --gasPrice=0 --gasLimit=1000000000 --mnemonic=\"${MNEMONIC}\" "]
+ENTRYPOINT ganache-cli --host=0.0.0.0 --db=${DATADIR} --gasPrice=0 --gasLimit=9007199254740991 --account="0x8f53a8fbb9cb0cc3c387376736700b0d20828b97e70cf25fbdd9ef5003a672b6,1000000000000000000000000000000000000000" --account="0xd864f011bf2a4bcd0956877f0e35d950462c8391387bd5fa6322a1d3e599ee26,1000000000000000000000000000000000000000" --account="0xae75fd01ac2165b5a0c8be1ed7221a2ab292958bd28c6fd4fc9a16871b6f9bd0,1000000000000000000000000000000000000000"
